[gd_scene load_steps=18 format=3 uid="uid://co7qgxqvb5b2o"]

[ext_resource type="Script" path="res://characters/player/player.gd" id="1_pmu22"]
[ext_resource type="Texture2D" uid="uid://nvi2o8c2je0b" path="res://graphics/images/Player/Player_Walk.png" id="2_0bokj"]
[ext_resource type="Texture2D" uid="uid://df1l7a6w4bn6v" path="res://graphics/images/items/animations/sword.png" id="3_f5v0u"]
[ext_resource type="AudioStream" uid="uid://bdtso4gukr1a2" path="res://sounds/steps.mp3" id="4_gb5an"]
[ext_resource type="AudioStream" uid="uid://do085vaik7geu" path="res://sounds/drink.mp3" id="5_1s72d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m13ji"]
radius = 7.5
height = 21.0

[sub_resource type="Animation" id="Animation_7ksxx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_nlh14"]
resource_name = "Walk_left"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1)]
}

[sub_resource type="Animation" id="Animation_ui6at"]
resource_name = "Walk_right"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fw1gb"]
_data = {
"RESET": SubResource("Animation_7ksxx"),
"Walk_left": SubResource("Animation_nlh14"),
"Walk_right": SubResource("Animation_ui6at")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hjaom"]
radius = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xs33u"]
height = 34.0

[sub_resource type="Animation" id="Animation_d0u6t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_pryhj"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_crni5"]
resource_name = "drink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="Animation" id="Animation_pyhyc"]
resource_name = "idle"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fw7na"]
_data = {
"RESET": SubResource("Animation_d0u6t"),
"attack": SubResource("Animation_pryhj"),
"drink": SubResource("Animation_crni5"),
"idle": SubResource("Animation_pyhyc")
}

[node name="player" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 1539
script = ExtResource("1_pmu22")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0bokj")
hframes = 5
vframes = 4
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("CapsuleShape2D_m13ji")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fw1gb")
}

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_hjaom")
debug_color = Color(0, 0.639216, 0.392157, 0.419608)

[node name="HitTimer" type="Timer" parent="."]
autostart = true

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(10, 0)
shape = SubResource("CapsuleShape2D_xs33u")
disabled = true
debug_color = Color(0.976471, 0, 0.415686, 0.419608)

[node name="Weapon" type="Sprite2D" parent="AttackBox"]
position = Vector2(10, 3)
scale = Vector2(0.9375, 0.9375)
texture = ExtResource("3_f5v0u")
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttackBox"]
libraries = {
"": SubResource("AnimationLibrary_fw7na")
}

[node name="AttackDuration" type="Timer" parent="."]

[node name="ConsumeDuration" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -18.0
offset_top = -25.0
offset_right = 18.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 9
step = 25.0
show_percentage = false

[node name="walkPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gb5an")

[node name="drinkPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1s72d")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="AttackDuration" to="." method="_on_attack_duration_timeout"]
[connection signal="timeout" from="ConsumeDuration" to="." method="_on_consume_duration_timeout"]
[connection signal="finished" from="walkPlayer" to="." method="_on_audio_stream_player_finished"]
